[package]
name = "gym-rs"
version = "0.3.0"
authors = [
    "MathisWellmann <wellmannmathis@gmail.com>",
    "Urmzd Mukhammadnaim <urmzd@dal.ca>"
]
edition = "2021"
license-file = "LICENSE"
description = "OpenAI's Gym written in pure Rust"
repository = "https://github.com/MathisWellmann/gym-rs"
readme = "README.md"
keywords = ["ai", "ml", "physical", "environment", "benchmark"]
categories = ["simulation", "science", "algorithms"]
exclude = ["img/"]

[dependencies]
rand = "0.8"
rand_pcg = "0.3"
log = "0.4.11"
pretty_env_logger = "0.4.0"
num = "0.3.0"
failure = "0.1.8"
derive-new = "0.5"
cosyne = { version = "0.3.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
derivative = { version = "2.2" }
nalgebra = "0.32"
ordered-float = { version = ">=3.9.1", features = ["serde", "rand"] }
num-traits = "0.2"
